--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "infinite-react-carousel": "^1.2.5",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hamburger-menu": "^1.1.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-slick": "^0.25.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
